[package]
name = "clin"
version = "0.2.1"
authors = ["James Kominick <james.kominick@gmail.com>"]
repository = "https://github.com/jaemk/clin"
description = "Command completion desktop notifications"
readme = "README.md"
keywords = ["cli", "notification", "remote", "server"]
license = "MIT"
exclude = ["ci/", ".travis.yml"]

[dependencies]
notify-rust = "3.4"
clap = "2.25"
serde = "1"
libc = "0.2"
serde_derive = "1"
serde_json = "1"
log = "0.3"
env_logger = "0.4"
chrono = "0.4"

reqwest = "0.7"
tempdir = "0.3"
flate2 = "0.2"
tar = "0.4"
