[package]
name = "clin"
version = "0.2.5"
authors = ["James Kominick <james.kominick@gmail.com>"]
repository = "https://github.com/jaemk/clin"
description = "Command completion desktop notifications"
readme = "README.md"
keywords = ["cli", "notification", "remote", "server"]
license = "MIT"
exclude = ["ci/", ".travis.yml"]
edition = "2018"

[dependencies]
notify-rust = "3"
clap = "2"
libc = "0.2"
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
self_update = { version = "0.8", optional = true }

[features]
default = ["update"]
update = ["self_update"]
